--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^13.4.0",
+    "@contentful/rich-text-types": "^13.4.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
