--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "odf-landingpage",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Ocean Data Foundation & Making Waves",
   "dependencies": {
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
@@ -25,6 +25,9 @@
     "prettier": "^1.18.2"
   },
   "keywords": [
+    "ocean",
+    "data",
+    "platform",
     "gatsby"
   ],
   "license": "MIT",
