--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Ocean Data Foundation & Making Waves",
   "dependencies": {
+    "@u-wave/react-vimeo": "^0.8.1",
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.17.6",
