--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-spring": "^8.0.27",
+    "sanitize.css": "^11.0.0",
     "smooth-scroll": "^16.1.0",
     "styled-components": "^4.4.1",
     "typeface-montserrat": "^0.0.75"
