--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^8.2.0",
     "gatsby": "^2.18.6",
+    "gatsby-cli": "^2.8.19",
     "gatsby-image": "^2.2.34",
-    "gatsby-plugin-gdpr-cookies": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.26",
