--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typeface-montserrat": "^0.0.75"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "prettier": "^1.19.1"
   },
   "keywords": [
