--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@u-wave/react-vimeo": "^0.8.2",
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
+    "framer-motion": "^4.0.3",
     "gatsby": "^2.20.7",
     "gatsby-cli": "^2.11.2",
     "gatsby-image": "^2.3.1",
